--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:produrl": "npm run lint && ng build --prod --base-href",
     "test": "ng test --sourceMap=false",
     "test:cov": "ng test --no-watch --code-coverage --no-progress --sourceMap=false --browsers=ChromeHeadlessCI",
-    "lint": "ng lint",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -32,7 +32,11 @@
     "@angular/compiler-cli": "~11.2.8",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
     "codelyzer": "^6.0.0",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
@@ -40,6 +44,8 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "prettier": "^2.3.0",
+    "prettier-eslint": "^12.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
